fix(mobile): fix budget toolbar display on mobile (#4)
* fix(mobile): fix budget toolbar display on mobile

Remove title and center month selector component in toolbar.

* ci(pull_requests): add github action for running lint on pull requests

issue #1

--- a/src/app/features/budget/ui/_budget.theme.scss
+++ b/src/app/features/budget/ui/_budget.theme.scss
@@ -2,10 +2,12 @@
 @import './budget-list/budget-item/budget-item.component.theme';
 @import './month-selector/month-selector-component.theme';
 @import './budget-list/budget-item-list/budget-item-list.component.theme';
+@import './budget-toolbar/budget-toolbar.theme';
 
 @mixin budget-theme($theme) {
   @include budget-item-group-theme($app-theme);
   @include budget-item-theme($app-theme);
   @include month-selector-theme($app-theme);
   @include budget-item-list-theme($app-theme);
+  @include budget-toolbar-theme($app-theme)
 }
